--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "jose": "^6.1.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.553.0",
-    "next": "16.0.3",
+    "next": "^16.0.10",
     "next-cloudinary": "^6.17.5",
     "postgres": "^3.4.7",
     "react": "19.2.0",
@@ -45,7 +45,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.3",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "typescript": "^5"
